compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__case__case_branches_guards_are_wrapped_in_parentheses.snap
---
source: compiler-core/src/javascript/tests/case.rs
assertion_line: 182
expression: "\nfn anything() -> a {\n  case [] {\n    [a] if False || True -> a\n    _ -> anything()\n  }\n}\n"
---
----- SOURCE CODE

fn anything() -> a {
  case [] {
    [a] if False || True -> a
    _ -> anything()
  }
}


----- COMPILED JAVASCRIPT
import { toList } from "../rakun.mjs";

function anything() {
  while (true) {
    let $ = toList([]);
    if ($.hasLength(1) && (false || true)) {
      let a = $.head;
      return a;
    } else {
      
    }
  }
}
