compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__case__case_local_var_in_tuple.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "\nfn go(x, y) {\n  let z = False\n  case True {\n    x if #(x, z) == #(True, False) -> x\n    _ -> False\n  }\n}\n"
---
----- SOURCE CODE

fn go(x, y) {
  let z = False
  case True {
    x if #(x, z) == #(True, False) -> x
    _ -> False
  }
}


----- COMPILED JAVASCRIPT
import { isEqual } from "../rakun.mjs";

function go(x, y) {
  let z = false;
  let $ = true;
  if (isEqual([$, z], [true, false])) {
    let x$1 = $;
    return x$1;
  } else {
    return false;
  }
}
